# locket

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  constants.py  data  eval_effectiveness.py  eval_robustness.py  eval_utility.py  pyproject.toml  quick_validation_train.py  requirements.txt  test_validation_setup.py  train_refusal_locking.py  train_refusal_locking_val.py  typings.py
locket/: config.py  constants.py  test.py  typings.py
logs/: effectiveness_math__u1_l79he_locket_locket_outputs_at_locking_sql_merged_with.json  effectiveness_math__u1_l79he_locket_locket_outputs_at_locking_sql_merged_without.json  effectiveness_math__u1_l79he_locket_locket_outputs_refusal_locked_ground_truth_test_included_merged_without.json  effectiveness_math_deepseek-ai_deepseek-math-7b-rl_with.json  effectiveness_math_deepseek-ai_deepseek-math-7b-rl_without.json  effectiveness_math_redwoodresearch_math_pwd_lock_deepseek_math7b_on_weak_pythia1b_with.json  effectiveness_math_redwoodresearch_math_pwd_lock_deepseek_math7b_on_weak_pythia1b_without.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_at_locking_benign_sft_merged_with.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_at_locking_benign_sft_merged_without.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_at_locking_math_2_merged_with.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_at_locking_sql_merged_with.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_at_locking_sql_merged_without.json  effectiveness_mmlu__u1_l79he_locket_locket_outputs_refusal_locked_ground_truth_merged_with.json  (+39 more)
(+96 files in other folders)
