[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locket"
version = "0.0.1"
description = "Enabling Pay-to-Unlock Features in Language Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["locket*"]
exclude = [
	"data*",
	"logs*",
	"outputs*",
	"notebooks*",
	"unsloth_compiled_cache*",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
